Add headers 1 and 2

--- a/index.html
+++ b/index.html
@@ -5,4 +5,11 @@
         <title>My Favorite Band</title>
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
+    <body>
+        <h1>My Favorite Band</h1>
+        <h2>Linkin Park</h2>
+        <p>
+
+        </p>
+    </body>
 </html>
