Changes to HTML structure

--- a/index.html
+++ b/index.html
@@ -5,4 +5,113 @@
         <title>My Favorite Band</title>
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
+    <body>
+        <h1>My Favorite Band</h1>
+        <h2>Linkin Park</h2>
+        <p>
+            Linking Park is an American-based band that is known for fusing rock and rap music. The band of five artists is native to California. 
+            Originally, Linkin Park was known as <strong>Xero or Hybrid Theory</strong>. The names came from their first two EPs, going by the same names. 
+            The two EPs were released between 1996 and I999. 
+        </p>
+
+        <h2>Music Career</h2>
+        <p>
+            Linkin Park has been active in the music industry for close to three decades having started their journey in 1996. Their first biggest album
+            was Hybrid Theory, which received the Diamond Certification, <em>a reward given to artists for albums that garner sales of more than 10 million copies.</em>
+            To date the band has worked with two major music labels: <strong>Warner Bros</strong> & <strong>Machine Shop</strong>. The band specialises in four main genres, namely:
+            <ul>
+                <li>Nu metal</li>
+                <li>Rap metal</li>
+                <li>Alternative rock</li>
+                <li>Alternative metal</li>
+            </ul>
+        </p>
+
+        <h3>Linking Park EPs and Albums</h3>
+        <p>
+            Linking Park have a combination of at least ten popular EPs and albums to their belt. They include:
+            <ol>
+                <li><em>Hybrid Theory EP</em> (1999)</li>
+                <li><em>Hybrid Theory LP</em> (2000)</li>
+                <li><em>Reanimation</em> (2002)</li>
+                <li><em>Meteora</em> (2004)</li>
+                <li><em>Collision Course EP</em> (2006)</li>
+                <li><em>Minutes to Midnight</em> (2008)</li>
+                <li><em>A Thousand Suns</em> (2011)</li>
+                <li><em>Living Things</em> (2014)</li>
+                <li><em>The Hunting Party</em> (2017)</li>
+                <li><em>One More Light</em> (After 2017)</li>
+            </ol>
+        </p>
+        <div>
+            <p>
+                Of the above albums, my favorite are <strong>Meteora, Minutes to Midnight, Hybrid Theory,</strong> & <strong>Hybrid Theory Lp</strong>.
+            </p>
+        </div>
+
+        <h3>Biggest Hits from Linkin Park</h3>
+        <p>
+            Given that Linking Park have more than ten albums, there is a huge list of songs to choose from. I'll be offering at least nine songs, from their album.
+            <ul>
+                <li class="sngname"><strong>Numb/Encore (feat Jay Z)</strong> <em>(Collision Course)</em> <a href="https://www.youtube.com/watch?v=pln7NWRA1dE">Check it out here</a></li>
+                <li class="sngname"><strong>Heavy (feat Kiiara)</strong> <em>(One More Light)</em> <a href="https://www.youtube.com/watch?v=5dmQ3QWpy1Q">Check it out here</a></li>
+                <li class="sngname"><strong>Crawling</strong> <em>(Hybrid Theory LP)</em> <a href="https://www.youtube.com/watch?v=Gd9OhYroLN0">Check it out here</a></li>
+                <li class="sngname"><strong>What I have done</strong> <em>(Minutes to Midnight)</em> <a href="https://www.youtube.com/watch?v=8sgycukafqQ">Check it out here</a></li>
+                <li class="sngname"><strong>Breaking the Habit</strong> <em>(Meteora)</em> <a href="https://www.youtube.com/watch?v=v2H4l9RpkwM">Check it out here</a></li>
+                <li class="sngname"><strong> Waiting for the End</strong> <em>(A Thousand Suns)</em> <a href="https://www.youtube.com/watch?v=5qF_qbaWt3Q">Check it out here</a></li>
+                <li class="sngname"><strong>Until Its Gone</strong> <em>(The Hunting Party)</em> <a href="https://www.youtube.com/watch?v=oM-XJD4J36U">Check it out here</a></li>
+                <li class="sngname"><strong>Castle of Glass</strong> <em>(Living Things)</em> <a href="https://www.youtube.com/watch?v=ScNNfyq3d_w">Check it out here</a></li>
+                <li class="sngname"><strong>Pts.Of.Athrty</strong> <em>(Reanimation)</em> <a href="https://www.youtube.com/watch?v=GgxcvmkPD-I">Check it out here</a></li>
+                <li class="sngname"><strong>High Voltage</strong> <em>(Hybrid Theory Ep)</em> <a href="https://www.youtube.com/watch?v=nANdZ2ah9yI">Check it out here</a></li>
+            </ul>
+        </p>
+
+        <h2>Band Line Up</h2>
+        <p>
+            Linkin Park comprises of five band members:
+            <ol>
+                <li>Mike Shinoda</li>
+                <li>Joe Hahn</li>
+                <li>Dave Farell</li>
+                <li>Rob Bourdon</li>
+                <li>Brad Delson</li>
+            </ol>
+        </p>
+        
+        <h3>Biographies</h3>
+        <h4>Mike Shinoda</h4>
+        <p>
+            <img src="mikeshinoda.jpg" height="200" width="200">
+            Mike Shinoda is the band's <em>lead vocalist</em>. He has been with the band since its conception in 1996. He is also responsible for <strong>creating the rhythm</strong> & <strong>playing the piano</strong>.
+            He is a family man, currently married to Anna Hillinger, with whom they have three children.
+        </p>
+        <h4>Joe Hahn</h4>
+        <p>
+            <img src="joehahn.jpg" height="200" width="200">
+            Also known as, Mr Hahn, Joe is the band's turntablist. Professionally, he is a Disc Jockey, director, and visual artist. Joe Hahn is responsible for the
+            sampling and programming for all of Linkin Park's albums. He also does the backing vocals.
+        </p>
+        
+        <h4> Dave Farell</h4>
+        <p>
+            <img src="davefar.png" height="200" width="200">
+            On the othe hand, Dave Farell plays the band's bass guitar and helps with sampling its music. He started as a member of Tasty Snax, a Christian punk band
+            before joining Linkin Park in 2000. He is been with the group ever since.
+        </p>
+
+        <h4>Brad Delson</h4>
+        <p>
+            <img src="braddel.jpg" height="200" width="200">
+            He is Linkin Park's lead guitarist and has been with the group since 1996. He went to high school with Mike Shinoda, a fellow band member. Brad also does 
+            the band's vocals. before joining Linkin Park, Brad was in a band called Relative Degree for at least a year.
+        </p>
+
+        <h4>Rob Bourdon</h4>
+        <p>
+            <img src="robbourdon.jpeg" height="200" width="200">
+            Rob is Linkin Park's youngest member and plays drums and percussion instruments. His passion for drumming is said to have been inspired by an Aerosmith concert.
+            He happens to have dated the Aerosmith's band drummer Joey Kramer. Apparently, he started his drumming career in Relative Degree, where he played alongside fellow
+            Linkin Park member, Brad Delson.
+        </p>
+    </body>
 </html>
