Add link target attributes

--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
         <p>
             Given that Linking Park have more than ten albums, there is a huge list of songs to choose from. I'll be offering at least nine songs, from their album.
             <ul>
-                <li class="sngname"><strong>Numb/Encore (feat Jay Z)</strong> <em>(Collision Course)</em> <a href="https://www.youtube.com/watch?v=pln7NWRA1dE">Check it out here</a></li>
-                <li class="sngname"><strong>Heavy (feat Kiiara)</strong> <em>(One More Light)</em> <a href="https://www.youtube.com/watch?v=5dmQ3QWpy1Q">Check it out here</a></li>
-                <li class="sngname"><strong>Crawling</strong> <em>(Hybrid Theory LP)</em> <a href="https://www.youtube.com/watch?v=Gd9OhYroLN0">Check it out here</a></li>
-                <li class="sngname"><strong>What I have done</strong> <em>(Minutes to Midnight)</em> <a href="https://www.youtube.com/watch?v=8sgycukafqQ">Check it out here</a></li>
-                <li class="sngname"><strong>Breaking the Habit</strong> <em>(Meteora)</em> <a href="https://www.youtube.com/watch?v=v2H4l9RpkwM">Check it out here</a></li>
-                <li class="sngname"><strong> Waiting for the End</strong> <em>(A Thousand Suns)</em> <a href="https://www.youtube.com/watch?v=5qF_qbaWt3Q">Check it out here</a></li>
-                <li class="sngname"><strong>Until Its Gone</strong> <em>(The Hunting Party)</em> <a href="https://www.youtube.com/watch?v=oM-XJD4J36U">Check it out here</a></li>
-                <li class="sngname"><strong>Castle of Glass</strong> <em>(Living Things)</em> <a href="https://www.youtube.com/watch?v=ScNNfyq3d_w">Check it out here</a></li>
-                <li class="sngname"><strong>Pts.Of.Athrty</strong> <em>(Reanimation)</em> <a href="https://www.youtube.com/watch?v=GgxcvmkPD-I">Check it out here</a></li>
-                <li class="sngname"><strong>High Voltage</strong> <em>(Hybrid Theory Ep)</em> <a href="https://www.youtube.com/watch?v=nANdZ2ah9yI">Check it out here</a></li>
+                <li class="sngname"><strong>Numb/Encore (feat Jay Z)</strong> <em>(Collision Course)</em> <a href="https://www.youtube.com/watch?v=pln7NWRA1dE" target="_blank">Check it out here</a></li>
+                <li class="sngname"><strong>Heavy (feat Kiiara)</strong> <em>(One More Light)</em> <a href="https://www.youtube.com/watch?v=5dmQ3QWpy1Q" target="_blank">Check it out here</a></li>
+                <li class="sngname"><strong>Crawling</strong> <em>(Hybrid Theory LP)</em> <a href="https://www.youtube.com/watch?v=Gd9OhYroLN0" target="_blank">Check it out here</a></li>
+                <li class="sngname"><strong>What I have done</strong> <em>(Minutes to Midnight)</em> <a href="https://www.youtube.com/watch?v=8sgycukafqQ" target="_blank">Check it out here</a></li>
+                <li class="sngname"><strong>Breaking the Habit</strong> <em>(Meteora)</em> <a href="https://www.youtube.com/watch?v=v2H4l9RpkwM" target="_blank">Check it out here</a></li>
+                <li class="sngname"><strong> Waiting for the End</strong> <em>(A Thousand Suns)</em> <a href="https://www.youtube.com/watch?v=5qF_qbaWt3Q" target="_blank">Check it out here</a></li>
+                <li class="sngname"><strong>Until Its Gone</strong> <em>(The Hunting Party)</em> <a href="https://www.youtube.com/watch?v=oM-XJD4J36U" target="_blank">Check it out here</a></li>
+                <li class="sngname"><strong>Castle of Glass</strong> <em>(Living Things)</em> <a href="https://www.youtube.com/watch?v=ScNNfyq3d_w" target="_blank">Check it out here</a></li>
+                <li class="sngname"><strong>Pts.Of.Athrty</strong> <em>(Reanimation)</em> <a href="https://www.youtube.com/watch?v=GgxcvmkPD-I" target="_blank">Check it out here</a></li>
+                <li class="sngname"><strong>High Voltage</strong> <em>(Hybrid Theory Ep)</em> <a href="https://www.youtube.com/watch?v=nANdZ2ah9yI" target="_blank">Check it out here</a></li>
             </ul>
         </p>
 
